// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> Should render correctly 1`] = `
<div>
  <main
    class="page-container__container page-container__container--bottom-padding page-container__container--regular common-layout__grow"
    id="main"
  >
    <div>
      some text
    </div>
  </main>
  <footer
    class="footerstyles__Container-sc-ojjd19-0 beXJfO"
    id="footer"
  >
    <div
      class="logo__container footerstyles__StyledLogo-sc-ojjd19-1 dHUBSN logo__container--centred logo__container--no-padding"
    >
      <a
        class="logo__a"
        href="/"
      >
        <h1
          aria-label="Home page"
          class="logo__heading logo__heading--no-padding"
          role="button"
        >
          LOGO
        </h1>
      </a>
    </div>
    <div
      class="footerstyles__StyledTechSpecs-sc-ojjd19-2 hLmmol"
    >
      <span
        class="sc-jqUVSM iuHAUr tech-specsstyles__StyledParagraph-sc-1ysn53a-0 glkFZI"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 fVaLbn"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 fVaLbn"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 fVaLbn"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </span>
    </div>
    <div
      class="footer-navstyles__Wrapper-sc-7lmnsj-0 kTnJQq footerstyles__StyledFooterNav-sc-ojjd19-3"
    >
      <div
        class="footer-navstyles__Section-sc-7lmnsj-1 iFmILp"
      >
        <a
          class="sc-iBkjds cXbvnS"
          href="/sitemap"
        >
          Site map
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/privacy-policy"
        >
          Privacy
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/login"
        >
          Login/Account
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/status"
        >
          Status
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`<Layout /> Should render correctly with spread props 1`] = `
<div>
  <main
    class="page-container__container page-container__container--bottom-padding page-container__container--prose common-layout__grow"
    id="main"
  >
    <div>
      some text
    </div>
  </main>
  <footer
    class="footerstyles__Container-sc-ojjd19-0 beXJfO"
    id="footer"
  >
    <div
      class="logo__container footerstyles__StyledLogo-sc-ojjd19-1 dHUBSN logo__container--centred logo__container--no-padding"
    >
      <a
        class="logo__a"
        href="/"
      >
        <h1
          aria-label="Home page"
          class="logo__heading logo__heading--no-padding"
          role="button"
        >
          LOGO
        </h1>
      </a>
    </div>
    <div
      class="footerstyles__StyledTechSpecs-sc-ojjd19-2 hLmmol"
    >
      <span
        class="sc-jqUVSM iuHAUr tech-specsstyles__StyledParagraph-sc-1ysn53a-0 glkFZI"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 fVaLbn"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 fVaLbn"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 fVaLbn"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </span>
    </div>
    <div
      class="footer-navstyles__Wrapper-sc-7lmnsj-0 kTnJQq footerstyles__StyledFooterNav-sc-ojjd19-3"
    >
      <div
        class="footer-navstyles__Section-sc-7lmnsj-1 iFmILp"
      >
        <a
          class="sc-iBkjds cXbvnS"
          href="/sitemap"
        >
          Site map
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/privacy-policy"
        >
          Privacy
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/login"
        >
          Login/Account
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/status"
        >
          Status
        </a>
      </div>
    </div>
  </footer>
</div>
`;
